#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(grow, 0.0.2, oka+grow@oka.no)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([grow.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

AM_PROG_CC_C_O

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
